 • Fixed DAI echospam + working with multiple DAI bots + behavior improvements
 • Decoy com attacked warning sound is now a regular unit under attack sound
 • Fixed "map edge extension" not always showing up when it should
 • Fixed "States Prefs" widget overriding config table with empty table after loading a replay
 • Fixed Bloom rendering the map black on certain maps

Removed:
 • Removed "SmoothCam" widget: its integrated into options widget
 • Removed "GroupMove" widget because it had side effects/downsides
 • Removed old console and old ally resource bars widget
 • Removed modoptions: "Control Victory", "firethroughfriendly", "smallfeaturenoblock", "reclaimunitefficiency", "mm_diminish_factor", "enemycomcount", "no_close_spawns", "heatmap"


10.10 -> 10.11
23/07/2018

Balance changes:
 • Decreased Core Supporter (corvette) metal cost from 165 to 160.
 • Liche: -5% maxSpeed, +5% energy cost, +2.5% buildTime, damages to commanders 3150 (vs 3350)

Other:
 • Added "Vote interface" widget (displays on top of minimap, top left)
 • Added "Lua UiKeys Loader" widget allowing to load "uikeys.txt" file located in "LuaUI/Widgets_BA"
 • Added "real map and model lights" option to light effects widget. (disable this if you have old gpu)
 • Enabled improved "apply heat distortion" option by default (light effects widget)
 • Flamethrower spray less wide + hit effect changed
 • Enlarged options/changelog/commands/keys/gameinfo windows with 6%
 • Removing muted player chat completely instead of "(ignored)"
 • Player camera tracking updates more frequent and transitions are faster

Fixes:
 • Fixed sea fighters killing eachother when firing through eachother
 • Fixed fighters diving towards target until too close and taking AOE damages from friendly fighter hits
 • Fixed aircraft landing inside (ground) air repairpads
 • Fixed "Factory hold position" widget: some T3 factories didnt work before
 • Fixed cormaw (t1 flamethrower building) not closing properly